k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-api
  namespace: sushant
  labels:
    app: school-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: school-api
  template:
    metadata:
      labels:
        app: school-api
    spec:
      containers:
        - name: school-api
          image: sushant693/school-api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
