k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-db
  namespace: sushant
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: school-db
  template:
    metadata:
      labels:
        app: school-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-init
          configMap:
            name: mysql-init
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
