k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: sushant
spec:
  type: ClusterIP
  selector:
    app: school-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
