k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  namespace: sushant
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: school.local
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: school-api
                port:
                  number: 80
          - path: /students
            pathType: Prefix
            backend:
              service:
                name: school-api
                port:
                  number: 80
          - path: /classes
            pathType: Prefix
            backend:
              service:
                name: school-api
                port:
                  number: 80
